# rust-simple-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2022-06-14-182918_create_user/: up.sql
src/: db.rs  main.rs  schema.rs
src/api/: users_controller.rs
src/errors/: user.rs
src/middleware/: pool.rs
src/models/: auth.rs  jwt.rs  mod.rs  user.rs
src/tests/: mod.rs  user.rs
