[package]
name = "api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "1.4.0"
dotenv = "0.11"
log = "0.4"
env_logger = "0.6"
actix-web = "4.1.0"
actix-rt = "2.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8.9"
uuid = { version = "0.6", features = ["serde", "v4"] }
rand = "0.8.5"
rust-argon2 = "1.0"
validator = { version = "0.15.0", features = ["derive"] }
jsonwebtoken = "8.1.1"
actix-cors = "0.6.1"
futures-util = "0.3.21"
